disable user select div on ios and fix perturb slider

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 
